Rewrite update system